# how-to-vulkan-c

./: README.md  meson.build
source/: compile_shader.zsh  main.c  shader.slang  shader.spv
